--- a/src/components/Homepage/homepage.scss
+++ b/src/components/Homepage/homepage.scss
@@ -18,6 +18,10 @@
   }
 }
 
+.container--homepage .page-content {
+  padding-top: $spacing-09;
+}
+
 // Homepage image header area
 
 .homepage--header {
